# honest-shell

./: .gitignore  Bar.qml  BarConfig.qml  Clipboard.qml  EscClose.qml  Icons.qml  Popouts.qml  README.md  SysInfo.qml  Theme.qml  Updates.qml  WsUsage.qml  qmldir  shell.qml
components/: Icon.qml  Pill.qml  PopoutWindow.qml  TrayMenu.qml
helpers/: .gitignore  CMakeLists.txt  honest-screenshot.sh  honest-updates-sort.cpp
helpers/tests/: 01-sort-name-asc.args  01-sort-name-asc.in  01-sort-name-asc.out  02-filter-aur.args  02-filter-aur.in  02-filter-aur.out  03-sort-version-desc.args  03-sort-version-desc.in  03-sort-version-desc.out  run.sh
modules/: Battery.qml  Clipboard.qml  Clock.qml  Constructor.qml  CpuUsage.qml  GpuTemp.qml  LayoutSwitcher.qml  Logout.qml  Media.qml  NetSpeed.qml  Notes.qml  PowerProfile.qml  Privacy.qml  Tray.qml  Updates.qml  Volume.qml  Workspaces.qml
